--- a/custom.css
+++ b/custom.css
@@ -2434,6 +2434,7 @@ textarea.w-select {
 .ss-classes-h3 {
   margin-top: 0;
   margin-bottom: 0;
+  font-weight: 500;
   display: inline-block;
 }
 
